# rogue-planet

./: .gitignore  CMakeLists.txt  README.md  engine.cpp  engine.h  find_alpha.cpp  find_alpha.h  wrapper.cpp
Config/: DefaultGame.ini
Content/: BP_SolverManager.uasset  thermal_gradient.uasset
Content/Blueprints/: BP_GameMode.uasset
Content/Materials/: M_Land.uasset  M_Leaves.uasset  M_Trunk.uasset
Content/Trees/: SM_Tree_02.uasset  SM_Tree_03.uasset
Content/UI/: HUD.uasset  Restart.uasset
RogueEarth/: RogueEarth.uproject
RogueEarth/Config/: DefaultEngine.ini
RogueEarth/Content/: HeatConfig.uasset  LUT_Thermal.uasset  Map.umap
RogueEarth/Content/Materials/: MPC_Thermal.uasset  M_Thermal.uasset  M_Water.uasset
RogueEarth/Content/Trees/: SM_Tree_01.uasset
RogueEarth/Content/UI/: Start.uasset
RogueEarth/Source/RogueEarth/: TempConfig.h
RogueEarth/Source/RogueEarth/Solver/: engine.cpp  find_alpha.h
Source/: RogueEarth.Target.cs  RogueEarthEditor.Target.cs
Source/RogueEarth/: RogueEarth.Build.cs  RogueEarth.cpp  SolverManager.cpp  SolverManager.h
Source/RogueEarth/Solver/: CMakeLists.txt  README.md  engine.h
python/: test.py
